WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193183
[LFC][BFC] Margin collapsing should not be limited to in-flow non-replaced boxes.
https://bugs.webkit.org/show_bug.cgi?id=193183
Summary
[LFC][BFC] Margin collapsing should not be limited to in-flow non-replaced bo...
alan
Reported
2019-01-06 17:21:39 PST
ssia
Attachments
Patch
(18.97 KB, patch)
2019-01-06 17:23 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-01-06 17:23:04 PST
Created
attachment 358469
[details]
Patch
alan
Comment 2
2019-01-07 08:19:00 PST
Committed
r239675
: <
https://trac.webkit.org/changeset/239675
>
Radar WebKit Bug Importer
Comment 3
2019-01-07 08:19:29 PST
<
rdar://problem/47085369
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug